# hedonic-analysis-curitiba

./: .gitignore  README.md
Datasets/: CWB_Housing_Wrangled.xlsx  CWB_PCA.xlsx  Green_area.xlsx  Private_schools.xlsx  Shopping_centers.xlsx
Python/: pyproject.toml  wrangling.py
R/: 1.PCA.R  2.Geoprocessing.R  3.Rosen_Two_Step_Analysis.R
R/Markdown/: 3.Rosen_Two_Step_Analysis.html
